# RegiFarm

./: .eslintrc.json  .gitignore  AVVIA.sh  CHANGELOG.md  LICENSE  QUICK_START.md  README.md  env.example  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start-dev.sh  webpack.config.js
.github/workflows/: README.md  build-windows.yml  deploy-fly.yml
backend/: .dockerignore  Dockerfile  TEST_EVENT_LAMBDA.json  alembic.ini  build-lambda-arm64.sh  fly.toml  lambda_handler.py  requirements-lambda-v2.4.txt  requirements-lambda.txt  requirements.txt  start.sh  start_server.sh
backend/app/: __init__.py  main.py
backend/app/api/: auth.py
backend/app/core/: config.py  database.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  impostazioni.py
backend/app/schemas/: impostazioni.py
backend/app/services/: supabase_client.py
backend/app/utils/: __init__.py  pdf_generator.py  pdf_layout.py
backend/database/migrations/: README_REGIFARM_LOGO.md  (+13 more)
backend/scripts/: analyze_prima_nota_duplicates.py  check_local_db_duplicates.py  create_conto_soccida_monetizzata.py  execute_migration.py  fix_contropartita_prima_nota.py  inspect_fattura.py  migrate_movimenti_fatture_to_debiti_fornitori.sql  remove_duplicate_prima_nota.py  remove_local_db_duplicates.py  run_migration_scenario_ripartizione.py  update_aziende_debiti_crediti.py
docs/: DISTRIBUZIONE.md  ISTRUZIONI_UTENTE_TESTER.md  plan_semplificazione_prima_nota.md
electron-app/public/: index.html  preload.js
electron-app/scripts/: force-sync.js
scripts/: README_icons.md  generate_app_icons.py
(+415 files in other folders)
